@@ -18,12 +18,15 @@ dependencies {
 
     implementation 'org.apache.commons:commons-lang3:3.11'
 
-    testImplementation 'org.mockito:mockito-core:5.11.0'
-    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
+    implementation 'org.mockito:mockito-core:4.3.1'
 }
 
 test {
     useJUnitPlatform()
+//    jvmArgs(
+//            "-XX:+EnableDynamicAgentLoading",
+//            "-Dnet.bytebuddy.experimental=true",
+//            "-Dmockito.mockmaker=proxy")
 }
 
 pitest {
